# dicom2fem

./: .gitignore  .gitmodules  INSTALL  LICENSE  README  README.md  pyproject.toml  setup.cfg  setup.py
dicom2fem/: __init__.py  base.py  dicom2fem.py  genfem_base.py  marching_cubes.py  mesh.py  meshio.py  seg2fem.py  viewer.py  vtk2stl.py
doc/: Makefile  conf.py  index.rst  users_guide.rst
src/: base.py  dicom2fem.py  genfem_base.py  ioutils.py  marching_cubes.py  meshio.py  seg2fem.py  viewer.py
