[metadata]
name = dicom2fem
version = 2.0.1
description = Generation of finite element meshes from DICOM images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlukes/dicom2fem
author = Vladimir Lukes
author_email = vlukes@kme.zcu.cz
license = MIT
classifiers =
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = fem, dicom

[options]
packages = dicom2fem

[options.package_data]
* = *.png
